First working build of SHOS

--- a/config/includes.chroot_after_packages/etc/systemd/system/getty@tty1.service.d/override.conf
+++ b/config/includes.chroot_after_packages/etc/systemd/system/getty@tty1.service.d/override.conf
@@ -1,8 +1,9 @@
 [Service]
 ExecStart=
-ExecStart=/usr/local/bin/launch.sh
+ExecStart=/usr/bin/env bash -lc '/usr/local/bin/launch.sh'
 StandardInput=tty
 StandardOutput=tty
 StandardError=tty
 TTYPath=/dev/tty1
 TTYReset=yes
+Type=simple
